--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,6 @@ rvm:
   - 1.9.3
   - 2.0.0
   - ruby-head
-  - jruby-19mode
   
 matrix:
   allow_failures:
@@ -21,8 +20,8 @@ matrix:
     - rvm: ruby-head
         
 script: 
-  - RAILS_ENV=test bundle exec rake --trace db:migrate test 
+  - RAILS_ENV=test bundle exec rake db:migrate --trace
   
 before_script: 
-  - mysql -e 'create database blogit_test' 
-  - psql -c 'create database blogit_test' -U postgres
+  - mysql -e 'create database blogit_app_test' 
+  - psql -c 'create database blogit_app_test' -U postgres
