--- a/.travis.yml
+++ b/.travis.yml
@@ -29,3 +29,7 @@ before_script:
   # Ensure the MySQL DB Exists
   - mysql -e 'create database blogit_app_test' 
   - psql -c 'create database blogit_app_test' -U postgres
+  
+before_install:
+  - sudo apt-get update
+  - sudo apt-get install libpython2.7 python-pygments
