--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ matrix:
 script:
   # Make sure the databases are up to date
   - RAILS_ENV=test bundle exec rake db:migrate --trace
-  - bundle exec rake db:test:prepare
+  # - bundle exec rake db:test:prepare
   # Run the specs
   - bundle exec rspec spec
   
