--- a/.travis.yml
+++ b/.travis.yml
@@ -2,17 +2,17 @@ language: ruby
 
 env:
   - RAILS_VERSION=3.2.0
-  - RAILS_VERSION=4.0.0
-  - RAILS_VERSION=4.1.0
-  - RAILS_VERSION=master
-  - DB=sqlite
-  - DB=mysql
-  - DB=postgresql
+  # - RAILS_VERSION=4.0.0
+  # - RAILS_VERSION=4.1.0
+  # - RAILS_VERSION=master
+  # - DB=sqlite
+  # - DB=mysql
+  # - DB=postgresql
 
 rvm:
   - 1.9.3
-  - 2.0.0
-  - ruby-head
+  # - 2.0.0
+  # - ruby-head
 
 matrix:
   allow_failures:
@@ -21,8 +21,8 @@ matrix:
 
 script:
   # Install the acts-as-taggable-on migrations
-  - rake app:acts_as_taggable_on_engine:install:migrations
-  - rake app:blogit:install:migrations
+  - bundle exec rake app:acts_as_taggable_on_engine:install:migrations
+  - bundle exec rake app:blogit:install:migrations
 
   # Make sure the databases are up to date
   - cd spec/dummy && RAILS_ENV=test bundle exec rake db:migrate --trace
