--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,11 @@
 language: ruby
 
 env:
-  # - RAILS_VERSION=3.2.0
-  # - RAILS_VERSION=4.0.0
-  - RAILS_VERSION=4.1.0
   # - RAILS_VERSION=master
+  # - RAILS_VERSION=4.1.0
+  # - RAILS_VERSION=4.0.0
+  - RAILS_VERSION=3.2.0
+
   # - DB=sqlite
   # - DB=mysql
   # - DB=postgresql
@@ -20,9 +21,17 @@ matrix:
     - rvm: ruby-head
 
 script:
-  # Install the acts-as-taggable-on migrations
-  - bundle exec rake app:acts_as_taggable_on_engine:install:migrations
-  - bundle exec rake app:blogit:install:migrations
+  # Install the acts-as-taggable-on and blogit migrations
+  # If Rails version is 3, use the old generators.
+  # If Rails version is 4, use the new rake tasks.
+   -
+    "if (echo $RAILS_VERSION | grep '3.\d.\d') then
+      bundle exec rails generate acts_as_taggable_on:migration
+      bundle exec rails generate blogit:install
+    else
+      bundle exec rake app:acts_as_taggable_on_engine:install:migrations
+      bundle exec rake app:blogit:install:migrations
+    fi"
 
   # Make sure the databases are up to date
   - cd spec/dummy && RAILS_ENV=test bundle exec rake db:migrate --trace
