--- a/.travis.yml
+++ b/.travis.yml
@@ -24,8 +24,8 @@ script:
   # Install the acts-as-taggable-on and blogit migrations
   # If Rails version is 3, use the old generators.
   # If Rails version is 4, use the new rake tasks.
-  - if (echo $RAILS_VERSION | grep '3.\d.\d') then; bundle exec rails generate acts_as_taggable_on:migration; else; bundle exec rake app:acts_as_taggable_on_engine:install:migrations; fi
-  - if (echo $RAILS_VERSION | grep '3.\d.\d') then; bundle exec rails generate blogit:install; else; bundle exec rake app:blogit:install:migrations; fi
+  - if (echo $RAILS_VERSION | grep '3.\d.\d'); then bundle exec rails generate acts_as_taggable_on:migration; else bundle exec rake app:acts_as_taggable_on_engine:install:migrations; fi
+  - if (echo $RAILS_VERSION | grep '3.\d.\d'); then bundle exec rails generate blogit:install; else bundle exec rake app:blogit:install:migrations; fi
 
   # Make sure the databases are up to date
   - cd spec/dummy && RAILS_ENV=test bundle exec rake db:migrate --trace
