Improved test suite
- Added separate helpers for POROs and Rails classes
- Moved to sqlite3 in-memory database
- Tests can now all be run from the main gem dir

--- a/spec/dummy/config/database.yml
+++ b/spec/dummy/config/database.yml
@@ -1,6 +1,6 @@
 sqlite: &sqlite
   adapter: sqlite3 
-  database: db/<%= Rails.env %>.sqlite3 
+  database: ":memory:"
   
 mysql: &mysql 
   adapter: mysql2 
