--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,10 @@ tmp/**/*
 spec/dummy/db/*.sqlite3
 spec/dummy/log/*.log
 spec/dummy/tmp/
+
+# It's important that when developing, you start from a fresh install
+spec/dummy/app/views/blogit/
+spec/dummy/config/initializers/blogit.rb
+spec/dummy/db/migrate/*blogit*
+spec/dummy/db/migrate/*acts_as_taggable_on_engine*
+spec/dummy/db/schema.rb
