--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@ spec/dummy/config/initializers/blogit.rb
 spec/dummy/db/migrate/*blogit*
 spec/dummy/db/migrate/*acts_as_taggable_on_engine*
 spec/dummy/db/schema.rb
+spec/dummy/*.sqlite3
