Added Rails 4.2.0 to travis file

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: ruby
 
 env:
   - RAILS_VERSION=master
+  - RAILS_VERSION=4.2.0
   - RAILS_VERSION=4.1.0
   - RAILS_VERSION=4.0.0
   - RAILS_VERSION=3.2.0
