--- a/.travis.yml
+++ b/.travis.yml
@@ -44,10 +44,8 @@ script:
   # If Rails version is 3, use the old rake tasks.
   # If Rails version is 4, use the new rake tasks.
   - if (echo $RAILS_VERSION | grep '3.\d.\d'); then bundle exec rake acts_as_taggable_on:install:migrations; else bundle exec rake app:acts_as_taggable_on_engine:install:migrations; fi
+  
   - if (echo $RAILS_VERSION | grep '3.\d.\d'); then bundle exec rake blogit:install:migrations; else bundle exec rake app:blogit:install:migrations; fi
 
-  # Make sure the databases are up to date
-  - cd spec/dummy && RAILS_ENV=test bundle exec rake db:migrate --trace
-
   # Run the specs
-  - cd ../../ && bundle exec rspec spec
+  - bundle exec rspec spec
