Added common tag to seed blog posts

--- a/lib/tasks/seed_blog_posts.yml
+++ b/lib/tasks/seed_blog_posts.yml
@@ -18,7 +18,7 @@
     
     The skull bears little similarity to that of the European badger, and greatly resembles a larger version of a marbled polecat skull. The skull is very solidly built, with that of adults having no trace of an independent bone structure. The braincase is broader than that of dogs."
 
-  tag_list: "honeybadger, badass, animal"
+  tag_list: "honeybadger, badass, animal, awesome"
 
 -
   title: Why katanas are so cool 
@@ -52,7 +52,7 @@
     
     During the pre-World War II military buildup and throughout the war, all Japanese officers were required to wear a sword. Traditionally made swords were produced during this period, but in order to supply such large numbers of swords, blacksmiths with little or no knowledge of traditional Japanese sword manufacture were recruited. In addition, supplies of the Japanese steel (tamahagane) used for swordmaking were limited, so several other types of steel were used, as well. Quicker methods of forging were also used, such as the use of power-hammers, and quenching the blade in oil, rather than hand forging and water quenching. The non-traditionally made swords from this period are called "showato," after the regnal name of the Emperor Hirohito, and in 1937, the Japanese government started requiring the use of special stamps on the tang (nakago) to distinguish these swords from traditionally made swords. During this period of war, older antique swords were remounted for use in military mounts. Presently, in Japan, showato are not considered to be "true" Japanese swords, and they can be confiscated. Outside of Japan, however, they are collected as historical artifacts.
     
-  tag_list: "swords, katana, katanas, japan"
+  tag_list: "swords, katana, katanas, japan, awesome"
 -
   title: Have you ever tried this weird traditional food?!
   description: |
