--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,8 @@ env:
   - RAILS_VERSION=4.1.0
   - RAILS_VERSION=4.0.0
   - RAILS_VERSION=3.2.0
+  - RAILS_VERSION=3.1.0  
+  - RAILS_VERSION=3.0.0
 
   - DB=sqlite
   - DB=mysql
