--- a/spec/dummy/config/database.yml
+++ b/spec/dummy/config/database.yml
@@ -1,6 +1,6 @@
 sqlite: &sqlite
   adapter: sqlite3
-  database: ":memory:"
+  database: db/<%= Rails.env %>.sqlite3
 
 mysql: &mysql
   adapter: mysql2
