--- a/.travis.yml
+++ b/.travis.yml
@@ -41,17 +41,14 @@ before_script:
 script:
   # Setup the test app
   - bundle exec rake dummy:setup
-  - bundle exec rake app:blogit:install:migrations
+  # Create the blogit migrations.
+  #   If Rails version is 3, use the old rake tasks.
+  #   If Rails version is 4, use the new rake tasks.
+  - if (echo $RAILS_VERSION | grep '3.\d.\d'); then bundle exec rake blogit:install:migrations; else bundle exec rake app:blogit:install:migrations; fi
+
   - bundle exec rake db:migrate SCOPE=blogit
   # Create the blogit config file
   - bundle exec rails generate blogit:install
-
-  # Create the acts-as-taggable-on and blogit migrations
-  # If Rails version is 3, use the old rake tasks.
-  # If Rails version is 4, use the new rake tasks.
-  - if (echo $RAILS_VERSION | grep '3.\d.\d'); then bundle exec rake acts_as_taggable_on:install:migrations; else bundle exec rake app:acts_as_taggable_on_engine:install:migrations; fi
-
-  - if (echo $RAILS_VERSION | grep '3.\d.\d'); then bundle exec rake blogit:install:migrations; else bundle exec rake app:blogit:install:migrations; fi
 
   # Run the specs with CodeClimate API key
   - bundle exec rake
