--- a/.travis.yml
+++ b/.travis.yml
@@ -1,28 +1,24 @@
 language: ruby
 
-gemfile:
-  - Gemfile
-  - gemfiles/4.1.gemfile
-
 env:
-  # - RAILS_VERSION=master
-  # - RAILS_VERSION=4.2.0
-  # - RAILS_VERSION=4.1.0
-  # - RAILS_VERSION=4.0.0
-  # - RAILS_VERSION=3.2.0
-  # - RAILS_VERSION=3.1.0
-  # - RAILS_VERSION=3.0.0
+  - RAILS_VERSION=master
+  - RAILS_VERSION=4.2.0
+  - RAILS_VERSION=4.1.0
+  - RAILS_VERSION=4.0.0
+  - RAILS_VERSION=3.2.0
+  - RAILS_VERSION=3.1.0
+  - RAILS_VERSION=3.0.0
 
-  # - DB=sqlite
-  # - DB=mysql
-  # - DB=postgresql
+  - DB=sqlite
+  - DB=mysql
+  - DB=postgresql
 
 rvm:
-  # - 1.9.3
-  # - 2.0.0
-  # - 2.1.0
+  - 1.9.0
+  - 2.0.0
+  - 2.1.0
   - 2.2.0
-  # - ruby-head
+  - ruby-head
 
 addons:
   code_climate:
