--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 
 # Keep this out - it will break Travis
 Gemfile.lock
+gemfiles/*.lock
 
 log/*.log
 pkg/
@@ -23,3 +24,5 @@ spec/dummy/db/migrate/*blogit*
 spec/dummy/db/migrate/*acts_as_taggable_on_engine*
 spec/dummy/db/schema.rb
 spec/dummy/*.sqlite3
+
+vendor/bundle/
