--- a/.travis.yml
+++ b/.travis.yml
@@ -10,13 +10,6 @@ gemfile:
   - gemfiles/rails_4.0.gemfile
   - gemfiles/rails_3.2.gemfile
 
-# Just doing what I'm told https://github.com/grosser/wwtd
-bundler_args: "--no-deployment"
-
-addons:
-  code_climate:
-    repo_token: b96d4021e601491d9aae499b7658f1701f7af63de2ed3152d868f4df14b43fc2
-
 matrix:
   allow_failures:
     - env: RAILS_VERSION=master
@@ -31,4 +24,4 @@ before_script:
   - mysql -e 'create database blogit_app_test'
   - psql -c 'create database blogit_app_test' -U postgres
 
-script: "rake spec"
+script: "CODECLIMATE_REPO_TOKEN=b96d4021e601491d9aae499b7658f1701f7af63de2ed3152d868f4df14b43fc2 bundle exec rake spec"
