setup code climate according to docs
https://docs.codeclimate.com/v1.0/docs/travis-ci-ruby-test-coverage

removed from spec helper since it complained as follows:

This usage of the Code Climate Test Reporter is now deprecated. Since version
1.0, we now require you to run `SimpleCov` in your test/spec helper, and then
run the provided `codeclimate-test-reporter` binary separately to report your
results to Code Climate.

--- a/.travis.yml
+++ b/.travis.yml
@@ -34,3 +34,6 @@ script:
   - bundle exec rake db:create RAILS_ENV=test
   - bundle exec rake db:migrate RAILS_ENV=test
   - bundle exec rake spec
+
+after_success:
+  - bundle exec codeclimate-test-reporter
