--- a/.gitignore
+++ b/.gitignore
@@ -23,4 +23,4 @@ spec/dummy/db/migrate/*blogit*
 spec/dummy/db/migrate/*acts_as_taggable_on_engine*
 spec/dummy/db/schema.rb
 spec/dummy/*.sqlite3
-
+gemfiles/*.lock
