--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,6 +17,9 @@ jobs:
       # documented at https://circleci.com/docs/2.0/circleci-images/
       - image: circleci/postgres:9.6
 
+      # We need this for Pygyments
+      - image: sebastian256/latex
+
     working_directory: ~/blogit
 
     steps:
@@ -38,6 +41,11 @@ jobs:
           paths:
             - ./vendor/bundle
           key: v1-dependencies-{{ checksum "Gemfile.lock" }}
+
+      # Database setup
+      - run:
+          name: Bunder Audit
+          command: gem install bundle-audit && bundle-audit check --update
 
       # Database setup
       - run: bundle exec rake db:create
